added some parameters to index.html, updated version of swfobject.js, and removed the js directory, added icon.

--- a/bin/config.json
+++ b/bin/config.json
@@ -1,6 +1,6 @@
 {
 	"config" : {
-		"region": { "startingRegion":"LightTest"  },
+		"region": { "startingRegion":"AlexaIsland"  },
 		"typeName" : "types.json",
 		"showHelp" : false,
 		"showButtons" : true,
